# simd

./: CMakeLists.txt  README.md  configure.sh  modulefile.lua.in  simd-config.cmake.in
src/: simd.hpp  simd256x86def.hpp  simd256x86impl.hpp  simd512x86def.hpp  simd512x86impl.hpp  simd_ctest.cpp  simd_generic_ctest.hpp  simd_knc_avx512_ctest.cpp  simddef.hpp  simdif.hpp  varray.hpp
